--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
+html {
+    font-family: "Comic Sans MS", sans-serif;
+}
+
+.screen-margin {
+    margin: 2rem;
+}
+
 .center-screen {
     display: flex;
     flex-direction: column;
